<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_github_repository_detail"
        tools:context=".ui.detail.GitHubRepositoryDetailActivity"
        android:orientation="vertical"
        android:weightSum="1.0">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="0.5"
                  android:orientation="horizontal"
                  android:weightSum="1.0">

        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="0.5"
                      android:background="@drawable/white_with_grey_borders"
                      android:padding="16dp"
                      android:gravity="center"
                      android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/open_prs"/>

            <TextView android:id="@+id/openPrs"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="4dp"
                      tools:text="0"
                      android:textSize="24sp"
                      android:gravity="center"/>

        </LinearLayout>

        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="0.5"
                      android:background="@drawable/white_with_grey_borders"
                      android:padding="16dp"
                      android:gravity="center"
                      android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/closed_prs"/>

            <TextView android:id="@+id/closedPrs"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="4dp"
                      tools:text="0"
                      android:textSize="24sp"
                      android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="0.5"
                  android:orientation="horizontal">

        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="0.5"
                      android:background="@drawable/white_with_grey_borders"
                      android:padding="16dp"
                      android:gravity="center"
                      android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/open_issues"/>

            <TextView android:id="@+id/openIssues"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="4dp"
                      tools:text="0"
                      android:textSize="24sp"
                      android:gravity="center"/>

        </LinearLayout>

        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="0.5"
                      android:background="@drawable/white_with_grey_borders"
                      android:padding="16dp"
                      android:gravity="center"
                      android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/closed_issues"/>

            <TextView android:id="@+id/closedIssues"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="4dp"
                      tools:text="0"
                      android:textSize="24sp"
                      android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>